--- a/.github/workflows/ain10_intraday.yml
+++ b/.github/workflows/ain10_intraday.yml
@@ -103,29 +103,7 @@ jobs:
           set -e
           if [ ! -s "${SNAPSHOT_PNG}" ]; then
             echo "[fallback] generating simple PNG → ${SNAPSHOT_PNG}"
-            cat > _fallback_png.py <<'PY'
-import os
-from pathlib import Path
-import pandas as pd
-import matplotlib
-matplotlib.use("Agg")
-import matplotlib.pyplot as plt
-
-csv = Path(os.environ["CSV"])
-png = Path(os.environ["SNAPSHOT_PNG"])
-
-df = pd.read_csv(csv)
-cols = [c for c in df.columns if c.lower() != "datetime"]
-y = df[cols].mean(axis=1) if cols else pd.Series([0])
-
-plt.figure(figsize=(12,4), dpi=160)
-plt.plot(y)
-plt.title("AIN-10 Intraday (fallback)")
-plt.tight_layout()
-png.parent.mkdir(parents=True, exist_ok=True)
-plt.savefig(png)
-PY
-            python _fallback_png.py
+            python -c "import os,pandas as pd; from pathlib import Path; import matplotlib; matplotlib.use('Agg'); import matplotlib.pyplot as plt; csv=Path(os.environ['CSV']); png=Path(os.environ['SNAPSHOT_PNG']); df=pd.read_csv(csv); cols=[c for c in df.columns if c.lower()!='datetime']; y=df[cols].mean(axis=1) if cols else pd.Series([0]); plt.figure(figsize=(12,4), dpi=160); plt.plot(y); plt.title('AIN-10 Intraday (fallback)'); plt.tight_layout(); png.parent.mkdir(parents=True, exist_ok=True); plt.savefig(png)"
           fi
 
       - name: Normalize JSON (pct_intraday → ratio, safe)
@@ -133,21 +111,18 @@ PY
         run: |
           set -e
           if [ -s "${OUT_JSON}" ]; then
-            cat > _normalize_json.py <<'PY'
-import json, os, pathlib, datetime
-p = pathlib.Path(os.environ["OUT_JSON"])
-d = json.loads(p.read_text(encoding="utf-8"))
-v = d.get("pct_intraday", None)
+            python -c "import json,os,datetime as dt,pathlib as P; p=P.Path(os.environ['OUT_JSON']); d=json.loads(p.read_text(encoding='utf-8')) if p.exists() else {}; v=d.get('pct_intraday'); 
+fv=None
 try:
-    fv = float(v)
-    if abs(fv) > 1.0:   # percent → ratio
-        d["pct_intraday"] = round(fv / 100.0, 6)
+  fv=float(v)
 except Exception:
-    pass
-d["updated_at"] = datetime.datetime.now().astimezone().isoformat()
-p.write_text(json.dumps(d, ensure_ascii=False, indent=2), encoding="utf-8")
-PY
-            python _normalize_json.py
+  fv=None
+if fv is not None and abs(fv)>1.0:
+  d['pct_intraday']=round(fv/100.0,6)
+elif fv is not None:
+  d['pct_intraday']=fv
+d['updated_at']=dt.datetime.now().astimezone().isoformat()
+p.write_text(json.dumps(d, ensure_ascii=False, indent=2), encoding='utf-8')"
           fi
 
       - name: Upload artifacts (debug)
@@ -178,7 +153,6 @@ PY
           cp -f "${OUT_JSON}"     "${dst}/stats.json"
           cp -f "${OUT_TEXT}"     "${dst}/post_intraday.txt"
           cp -f "${SNAPSHOT_PNG}" "${dst}/intraday.png"
-          echo "📁 Copied to ${dst}"
           ls -l "${dst}"
 
       - name: Commit & push site
