--- a/.github/workflows/ain10_intraday.yml
+++ b/.github/workflows/ain10_intraday.yml
@@ -4,11 +4,11 @@ on:
   workflow_dispatch:
     inputs:
       session_start:
-        description: "US Session start (HH:MM JST)"
+        description: "US session start (HH:MM JST)"
         required: true
         default: "22:30"
       session_end:
-        description: "US Session end (HH:MM JST)"
+        description: "US session end (HH:MM JST)"
         required: true
         default: "05:00"
       day_anchor:
@@ -97,32 +97,64 @@ jobs:
             --dt-col        "${DT_COL}" \
             --value-type    "${VALUE_TYPE}" || echo "[fallback] primary CLI failed"
 
-      - name: Ensure fallback PNG if missing
+      - name: Ensure fallback PNG if missing (safe heredoc)
         shell: bash
         run: |
           set -e
           if [ ! -s "${SNAPSHOT_PNG}" ]; then
             echo "[fallback] generating simple PNG → ${SNAPSHOT_PNG}"
-            python -c "import os,pandas as pd; from pathlib import Path; import matplotlib; matplotlib.use('Agg'); import matplotlib.pyplot as plt; csv=Path(os.environ['CSV']); png=Path(os.environ['SNAPSHOT_PNG']); df=pd.read_csv(csv); cols=[c for c in df.columns if c.lower()!='datetime']; y=df[cols].mean(axis=1) if cols else pd.Series([0]); plt.figure(figsize=(12,4), dpi=160); plt.plot(y); plt.title('AIN-10 Intraday (fallback)'); plt.tight_layout(); png.parent.mkdir(parents=True, exist_ok=True); plt.savefig(png)"
+            cat > _fallback_png.py <<'PY'
+import os
+from pathlib import Path
+import pandas as pd
+import matplotlib
+matplotlib.use("Agg")
+import matplotlib.pyplot as plt
+
+csv = Path(os.environ["CSV"])
+png = Path(os.environ["SNAPSHOT_PNG"])
+
+df = pd.read_csv(csv)
+cols = [c for c in df.columns if c.lower() != "datetime"]
+y = df[cols].mean(axis=1) if cols else pd.Series([0])
+plt.figure(figsize=(12,4), dpi=160)
+plt.plot(y)
+plt.title("AIN-10 Intraday (fallback)")
+plt.tight_layout()
+png.parent.mkdir(parents=True, exist_ok=True)
+plt.savefig(png)
+PY
+            python _fallback_png.py
           fi
 
-      - name: Normalize JSON (pct_intraday → ratio, safe)
+      - name: Normalize JSON (pct_intraday → ratio) (safe heredoc)
         shell: bash
         run: |
           set -e
           if [ -s "${OUT_JSON}" ]; then
-            python -c "import json,os,datetime as dt,pathlib as P; p=P.Path(os.environ['OUT_JSON']); d=json.loads(p.read_text(encoding='utf-8')) if p.exists() else {}; v=d.get('pct_intraday'); 
-fv=None
+            cat > _normalize_json.py <<'PY'
+import json, os, datetime as dt
+from pathlib import Path
+
+p = Path(os.environ["OUT_JSON"])
+d = json.loads(p.read_text(encoding="utf-8")) if p.exists() else {}
+v = d.get("pct_intraday")
+
+fv = None
 try:
-  fv=float(v)
+    fv = float(v)
 except Exception:
-  fv=None
-if fv is not None and abs(fv)>1.0:
-  d['pct_intraday']=round(fv/100.0,6)
+    fv = None
+
+if fv is not None and abs(fv) > 1.0:
+    d["pct_intraday"] = round(fv/100.0, 6)
 elif fv is not None:
-  d['pct_intraday']=fv
-d['updated_at']=dt.datetime.now().astimezone().isoformat()
-p.write_text(json.dumps(d, ensure_ascii=False, indent=2), encoding='utf-8')"
+    d["pct_intraday"] = fv
+
+d["updated_at"] = dt.datetime.now().astimezone().isoformat()
+p.write_text(json.dumps(d, ensure_ascii=False, indent=2), encoding="utf-8")
+PY
+            python _normalize_json.py
           fi
 
       - name: Upload artifacts (debug)
